--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,12 @@ dependencies:
   flutter_native_splash: ^2.3.11
   http: ^1.2.0
   cached_network_image: ^3.3.1
-  intl: ^0.19.0
+  intl: ^0.18.0
+  provider: ^6.1.2
+  flutter_localizations:
+    sdk: flutter
+  shared_preferences: ^2.2.3
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +64,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
